--- a/lounge.html
+++ b/lounge.html
@@ -61,7 +61,12 @@
     <h3>Lemon Breeze</h3>
     <p>
       The ultimate healthy drink, this elixir combines
-      herbal botanicals, minerals, and vitamins with
+      herbal botanicour spacious tiki-themed dance floor. Or just hang out in one of our 
+      comfy white vinyl booths at the dance bar. You can have your elixirs 
+      delivered from the main lounge right to the dance floor. If you've 
+      had enough of the beat, just head back to the lounge area to relax.
+      And, no matter where you find yourself in the lounge, you'll always be 
+      connected with our wireless Internet access.als, minerals, and vitamins with
       a twist of lemon into a smooth citrus wonder
       that will keep your immune system going all
       day and all night.
@@ -83,7 +88,9 @@
     <h3>Black Brain Brew</h3>
     <p>
       Want to boost your memory?  Try our Black Brain Brew
-      elixir, made with black oolong tea and just a touch
+      elixir,We're frequently asked about the music we play at the lounge, and no wonder, 
+      it's great stuff. Just for you, we keep a list here on the site, updated weekly. 
+      Enjoy. made with black oolong tea and just a touch
       of espresso.  Your brain will thank you for the boost.
     </p>
 
